--- a/data/yaml/fake-ip-filter.yaml
+++ b/data/yaml/fake-ip-filter.yaml
@@ -1,210 +1,97 @@
 payload:
+  # -- Top-level wildcards --
   - "*"
   - "*.*.stun.*"
   - "*.*.turn.*"
   - "*.*.xboxlive.com"
-  - "*.12306.cn"
-  - "*.126.net"
-  - "*.189.cn"
-  - "*.95599.cn"
-  - "*.alicdn.com"
-  - "*.alipay.com"
-  - "*.alipayobjects.com"
-  - "*.aliyun.com"
-  - "*.aliyuncs.com"
-  - "*.apple.com"
-  - "*.arpa"
-  - "*.baidu.com"
-  - "*.battlenet.com.cn"
-  - "*.bdstatic.com"
-  - "*.bdydns.com"
-  - "*.bilibili.com"
-  - "*.bilivideo.com"
-  - "*.cmbchina.com"
-  - "*.cmpassport.com"
-  - "*.cn"
-  - "*.direct"
-  - "*.douyinpic.com"
-  - "*.douyinvod.com"
-  - "*.douyu.com"
-  - "*.douyucdn.com"
-  - "*.edu.cn"
-  - "*.epicgames.com"
-  - "*.example"
-  - "*.ffxiv.com"
-  - "*.finalfantasyxiv.com"
-  - "*.github.com"
-  - "*.gov.cn"
-  - "*.gtimg.cn"
-  - "*.hdslb.com"
-  - "*.hicloud.com"
-  - "*.home.arpa"
-  - "*.huya.com"
-  - "*.icbc.com.cn"
-  - "*.icloud-content.com"
-  - "*.icloud.com"
-  - "*.invalid"
-  - "*.iqiyi.com"
-  - "*.jd.com"
-  - "*.jdpay.com"
-  - "*.jijifun.com"
-  - "*.ksyungslb.com"
-  - "*.kuaidi100.com"
-  - "*.kuwo.cn"
-  - "*.lan"
-  - "*.link"
-  - "*.linksys.com"
-  - "*.linksyssmartwifi.com"
-  - "*.local"
-  - "*.localdomain"
-  - "*.localnet"
-  - "*.lol.qq.com"
-  - "*.mcdn.bilivideo.cn"
-  - "*.microsoft.com"
-  - "*.mihoyo.com"
-  - "*.msftconnecttest.com"
-  - "*.msftncsi.com"
-  - "*.music.163.com"
-  - "*.music.migu.cn"
-  - "*.mzres.com"
+
+  # -- STUN / TURN / hole-punching --
+  - "stun.*"
+  - "*.stun.*"
+  - "stun.l.google.com"
+  - "stun.services.mozilla.com"
+  - "turn.*"
+  - "+.stun.*.*"
+  - "+.stun.*.*.*"
+  - "+.stun.*.*.*.*"
+  - "+.stun.*.*.*.*.*"
+  - "+.stun.playstation.net"
+
+  # -- Xbox / Nintendo --
+  - "xbox.*.*.microsoft.com"
   - "*.n.n.srv.nintendo.net"
-  - "*.netease.com"
-  - "*.ntp.org.cn"
-  - "*.oppomobile.com"
-  - "*.pingan.com.cn"
+
+  # -- NTP / time-sync --
+  - "pool.ntp.org"
   - "*.pool.ntp.org"
-  - "*.push.xiaomi.com"
-  - "*.qcloud.com"
-  - "*.qpic.cn"
-  - "*.qq.com"
-  - "*.router.asus.com"
-  - "*.sm.cn"
-  - "*.so.com"
-  - "*.sogou.com"
-  - "*.square-enix.com"
+  - "ntp.*.com"
+  - "ntp1.*.com"
+  - "ntp2.*.com"
+  - "ntp3.*.com"
+  - "ntp4.*.com"
+  - "ntp5.*.com"
+  - "ntp6.*.com"
+  - "ntp7.*.com"
+  - "time.*.*"
+  - "time.*.*.*"
+  - "time.*.apple.com"
+  - "time.*.com"
+  - "time1.*.com"
+  - "time1.cloud.tencent.com"
+  - "time2.*.com"
+  - "time3.*.com"
+  - "time4.*.com"
+  - "time5.*.com"
+  - "time6.*.com"
+  - "time7.*.com"
+
+  # -- Apple / iCloud --
+  - "*.apple.com"
+  - "swcdn.apple.com"
+  - "swdist.apple.com"
+  - "swdownload.apple.com"
+  - "swquery.apple.com"
+  - "swscan.apple.com"
+  - "mesu.apple.com"
+  - "*.icloud.com"
+  - "*.icloud-content.com"
+  - "mask.icloud.com"
+  - "mask-h2.icloud.com"
+
+  # -- Other global services --
+  - "*.github.com"
+  - "*.microsoft.com"
+  - "*.windowsupdate.com"
+  - "dl.google.com"
+  - "lens.l.google.com"
+  - "proxy.golang.org"
+  - "dns.adguard.com"
+  - "nas.synology.com"
+
+  # -- Game platforms / CDNs --
   - "*.steamcontent.com"
   - "*.steampowered.com"
   - "*.steamstatic.com"
-  - "*.stun.twilio.com"
-  - "*.taobao.com"
-  - "*.tencent-cloud.com"
-  - "*.test"
-  - "*.time.edu.cn"
-  - "*.tmall.com"
-  - "*.video.qq.com"
-  - "*.voice.qq.com"
-  - "*.wechat.com"
-  - "*.weixin.qq.com"
-  - "*.windowsupdate.com"
-  - "*.wo.cn"
-  - "*.xiami.com"
-  - "*.xiaomi.com"
-  - "*.y.qq.com"
-  - "*.youku.com"
-  - +.10010.com
-  - +.baidu.com
-  - +.chinatelecom.com.cn
-  - +.chinaunicom.com
-  - +.cmctelecom.com
-  - +.cn
-  - +.home.arpa
-  - +.lan
-  - +.local
-  - +.localdomain
-  - +.localhost
-  - +.market.xiaomi.com
-  - +.msftconnecttest.com
-  - +.msftncsi.com
-  - +.nflxvideo.net
-  - +.plex.direct
-  - +.pool.ntp.org
-  - +.stun.*.*
-  - +.stun.*.*.*
-  - +.stun.*.*.*.*
-  - +.stun.*.*.*.*.*
-  - +.stun.playstation.net
-  - +.wargaming.net
-  - +.wggames.cn
-  - +.wotgame.cn
-  - +.wowsgame.cn
-  - +.xn--fiqs8s
-  - +.中国
-  - .example
-  - .invalid
-  - .lan
-  - .local
-  - .localdomain
-  - .localhost
-  - .test
-  - amobile.music.tc.qq.com
-  - api-jooxtt.sanook.com
-  - api.joox.com
-  - aqqmusic.tc.qq.com
-  - captive.apple.com
-  - connect.rom.miui.com
-  - connectivitycheck.gstatic.com
-  - detectportal.firefox.com
-  - dl.google.com
-  - dl.stream.qqmusic.qq.com
-  - dns.adguard.com
-  - dns.msftncsi.com
-  - heartbeat.belkin.com
-  - isure.stream.qqmusic.qq.com
-  - joox.com
-  - lens.l.google.com
-  - localhost
-  - localhost.*
-  - localhost.ptlogin2.qq.com
-  - localhost.sec.qq.com
-  - localhost.work.weixin.qq.com
-  - mask-h2.icloud.com
-  - mask.icloud.com
-  - mesu.apple.com
-  - mobileoc.music.tc.qq.com
-  - msftncsi.com
-  - music.163.com
-  - music.migu.cn
-  - music.taihe.com
-  - musicapi.taihe.com
-  - nas.synology.com
-  - ntp.*.com
-  - ntp.ntsc.ac.cn
-  - ntp1.*.com
-  - ntp2.*.com
-  - ntp3.*.com
-  - ntp4.*.com
-  - ntp5.*.com
-  - ntp6.*.com
-  - ntp7.*.com
-  - proxy.golang.org
-  - router.asus.com
-  - songsearch.kugou.com
-  - streamoc.music.tc.qq.com
-  - stun.*
-  - stun.l.google.com
-  - stun.services.mozilla.com
-  - swcdn.apple.com
-  - swdist.apple.com
-  - swdownload.apple.com
-  - swquery.apple.com
-  - swscan.apple.com
-  - time.*.*
-  - time.*.*.*
-  - time.*.apple.com
-  - time.*.com
-  - time.*.edu.cn
-  - time.*.gov
-  - time1.*.com
-  - time1.cloud.tencent.com
-  - time2.*.com
-  - time3.*.com
-  - time4.*.com
-  - time5.*.com
-  - time6.*.com
-  - time7.*.com
-  - trackercdn.kugou.com
-  - turn.*
-  - www.msftconnecttest.com
-  - www.msftncsi.com
-  - xbox.*.*.microsoft.com
-  - y.qq.com
+  - "*.epicgames.com"
+  - "*.square-enix.com"
+  - "*.ffxiv.com"
+  - "*.finalfantasyxiv.com"
+  - "+.wargaming.net"
+  - "+.wggames.cn"
+  - "+.wotgame.cn"
+  - "+.wowsgame.cn"
+
+  # -- Router / IoT private domains --
+  - "router.asus.com"
+  - "*.router.asus.com"
+  - "*.linksys.com"
+  - "*.linksyssmartwifi.com"
+  - "heartbeat.belkin.com"
+  - "+.plex.direct"
+  - "*.direct"
+  - "*.link"
+
+  # -- Misc. TLDs / uncategorised --
+  - "*.arpa"
+  - "+.nflxvideo.net"
+  - "+.xn--fiqs8s"
